Autonomous Multi-Agent Enterprise Intelligence Platform/DEPLOYMENT/MongoDB Deployment.YAML
apiVersion: apps/v1

kind: Deployment

metadata:
  name: mongodb

spec:
  replicas: 1

  template:
    spec:
      containers:
      - name: mongodb

        image: mongo:latest
