Autonomous Multi-Agent Enterprise Intelligence Platform/DEPLOYMENT/Neo4j Deployment.YAML
apiVersion: apps/v1

kind: Deployment

metadata:
  name: neo4j

spec:
  replicas: 1

  template:
    spec:
      containers:
      - name: neo4j

        image: neo4j:latest
